src/test/ui/structs/struct-variant-privacy.stderr
error[E0603]: enum `Bar` is private
  --> $DIR/struct-variant-privacy.rs:7:14
   |
LL | fn f(b: foo::Bar) {
   |              ^^^

error[E0603]: enum `Bar` is private
  --> $DIR/struct-variant-privacy.rs:9:14
   |
LL |         foo::Bar::Baz { a: _a } => {}
   |              ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
